# barba-film-bot

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 20260313_1623_create_user_table.py  20260416_1852_create_movie_tables.py  20260417_1145_create_movie_tables.py  20260417_1505_update_movie_processing.py  20260418_1200_add_category_name_original.py  20260428_1000_add_user_auth_provider.py  20260430_1200_add_user_movie_top_index.py  20260514_1000_add_movie_original_fields.py
app/admin/: movie_use_cases.py  router.py  schemas.py
app/api/: main.py
app/auth/: providers.py  router.py  schemas.py
app/bot/: error_handler.py  main.py  texts.py  utils.py
app/bot/callbacks/: all_movies.py  charts.py  movie.py  movie_list.py  navigation.py
app/bot/handlers/: charts.py  feedback.py  start.py
app/bot/keyboards/: all_movies.py  back.py  charts.py  details.py  main_menu.py  media_type.py  movie_list.py  year.py
app/bot/middlewares/: database.py
app/bot/states/: all_movies.py  browse.py  feedback.py  movie.py
app/clients/: groq.py  tmdb.py
app/clients/llm/: __init__.py  base.py  cache.py  claude.py  groq.py  observability.py  prompts.py  schemas.py
app/core/: auth.py  config.py  sentry.py  settings.py  version.py
app/discovery/: repository.py  router.py  schemas.py  service.py
app/infrastructure/: arq_pool.py
app/infrastructure/database/: base.py  dependencies.py  engine.py  lifespan.py  session_manager.py  uow.py
app/movie/: models.py  ops_router.py  ops_use_cases.py  processing_use_case.py  query_parser.py  repository.py  router.py  schemas.py  use_cases.py
app/share/: router.py
app/user/: models.py  repository.py  router.py  schemas.py
app/utils/: text.py
app/worker/: main.py  tasks.py
mobile/: .gitignore  app.config.js  app.json  babel.config.js  eas.json  expo-google-fonts-neucha-0.4.1.tgz  package-lock.json  package.json  tailwind.config.js  tsconfig.json
mobile/app/: +not-found.tsx  _layout.tsx  add.tsx  auth.tsx  filters.tsx  rate.tsx  share.tsx
mobile/app/(app)/: _layout.tsx  add.tsx  charts.tsx  index.tsx  movies.tsx
mobile/app/(auth)/: index.tsx
mobile/app/(tabs)/: _layout.tsx  charts.tsx  movies.tsx  profile.tsx
mobile/app/chart/: [slug].tsx
mobile/app/charts/: [id].tsx
mobile/app/empty/: filter.tsx  movies.tsx
mobile/app/movie/: [id].tsx
mobile/app/movie-from-chart/: [id].tsx
mobile/plugins/: withAndroidNavBar.js
mobile/src/: theme.tsx
mobile/src/api/: auth.ts  charts.ts  client.ts  movies.ts  user.ts
mobile/src/components/: Button.tsx  Chip.tsx  Phone.tsx  Poster.tsx  StarRow.tsx  StatusPill.tsx  TabBar.tsx  Text.tsx
mobile/src/constants/: env.ts  theme.ts
mobile/src/i18n/: en.ts  index.ts  ru.ts
mobile/src/lib/: queryClient.ts
mobile/src/screens/: AddScreen.tsx  AuthScreen.tsx  ChartViewScreen.tsx  ChartsScreen.tsx  EmptyScreens.tsx  FiltersScreen.tsx  HomeScreen.tsx  MovieFromChartScreen.tsx  MovieScreen.tsx  MoviesScreen.tsx  ProfileScreen.tsx  RatingPromptScreen.tsx  ShareScreen.tsx
mobile/src/store/: auth.store.ts  (+2 more)
scripts/: backfill_original_fields.py  replace_posters_with_tmdb.py  test_groq_models.py  test_processing.py
(+27 files in other folders)
