[project]
name = "barba-film-bot"
version = "0.1.0"
description = ""
authors = [
{name = "kot_barba"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
"aiogram (>=3.25.0,<4.0.0)",
"fastapi (>=0.129.0,<0.130.0)",
"uvicorn (>=0.40.0,<0.41.0)",
"sqlalchemy (>=2.0.46,<3.0.0)",
"asyncpg (>=0.31.0,<0.32.0)",
"alembic (>=1.18.4,<2.0.0)",
"pydantic-settings (>=2.12.0,<3.0.0)"
]

[dependency-groups]
dev = [
"pytest (>=9.0.2,<10.0.0)",
"pytest-asyncio (>=1.3.0,<2.0.0)",
"ruff (>=0.4.0,<1.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 99
target-version = "py313"

exclude = [
".git",
".venv",
"build",
"dist",
"migrations"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

ignore = [
"E203"
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
