[project]
name = "barba-film-bot"
version = "1.9.0"
description = ""
authors = [
{name = "kot_barba"}
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiogram[redis] (>=3.25.0,<4.0.0)",
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "greenlet (>=3.3.2,<4.0.0)",
    "arq>=0.25.0",
    "anthropic>=0.102.0",
    "langfuse>=2.0.0",
    "httpx>=0.28.1",
    "sentry-sdk[fastapi,sqlalchemy]>=2.58.0",
    "pyjwt[crypto]>=2.12.1",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
"pytest (>=9.0.2,<10.0.0)",
"pytest-asyncio (>=1.3.0,<2.0.0)",
"ruff (>=0.4.0,<1.0.0)"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 99
target-version = "py313"

exclude = [
".git",
".venv",
"build",
"dist",
"migrations"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

ignore = [
"E203",
"B008",  # FastAPI uses Query(), Depends() in function defaults by design
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
